--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
+#root{
+  max-width: 600px;
+  margin: 0 auto;
+}
+
+h1{
+  font-size: 24px;
+  color: #d00a0a;
+}
 .App {
   text-align: center;
 }
