--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+#root{
+  max-width: 600px;
+  margin: 0 auto;
+}
+
+h1{
+  font-size: 24px;
+  color: #d00a0a;
+}
